aggiunta regola wfs claase al catalogo nel less

--- a/style/g3w-catalog.less
+++ b/style/g3w-catalog.less
@@ -135,6 +135,11 @@ Licensed under MIT
   color: @color-white;
 }
 
+.wfs {
+  border-bottom: 1px dotted;
+  border-color: yellow;
+}
+
 .catalog {
   padding:3px;
 }
