--- a/style/g3w-catalog.less
+++ b/style/g3w-catalog.less
@@ -116,7 +116,7 @@ Licensed under MIT
   background-color:@sidebar-dark-submenu-bg;
 }
 
-.catalog .tree-item{
+.catalog .tree-item, .catalog #legend div{
   padding: 1px 0px 1px 0.8em;
   &.selected {
     background-color: @light-blue;
@@ -135,7 +135,7 @@ Licensed under MIT
   color: @color-white;
 }
 
-.wfs {
+.controltoggled {
   border-bottom: 1px dotted;
   border-color: yellow;
 }
