nella registrazione dei servizi aggiunti anche i servizi dei sottocomponenti (map, etc..) e rinominata classe per il catalog

--- a/style/g3w-catalog.less
+++ b/style/g3w-catalog.less
@@ -135,7 +135,7 @@ Licensed under MIT
   color: @color-white;
 }
 
-.controltoggled {
+.highlightlayer {
   border-bottom: 1px dotted;
   border-color: yellow;
 }
