agginto stile marker per overlay su mappa

--- a/style/app.less
+++ b/style/app.less
@@ -29,6 +29,7 @@
 @import "g3w-projectscatalog";
 @import "g3w-tools";
 @import "g3w-mapcontrols";
+@import "g3w-mapmarker";
 @import "g3w-queryresults";
 @import "g3w-form";
 
