.close-panel-block { modificato less per tenerein coinsiderazione relations nella uqery results

--- a/style/app.less
+++ b/style/app.less
@@ -32,6 +32,7 @@
 @import "g3w-mapmarker";
 @import "g3w-queryresults";
 @import "g3w-form";
+@import "g3w-contents";
 
 .toast-top-center {
   top: 60px;
