--- a/style/g3w-contents.less
+++ b/style/g3w-contents.less
@@ -4,4 +4,31 @@
   >div {
     height: 100%;
   }
+  .header {
+    margin: 10px 0px;
+    font-size: 1.1em;
+    .key {
+      display: inline-block;
+      width: 60px;
+    }
+    .value {
+      font-weight: bold;
+      display: inline-block;
+    }
+  }
+  .back-btn {
+    cursor: pointer;
+    margin-bottom: 10px;
+    .back-link {
+      color: #3c8dbc;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+  table {
+    empty-cells: show;
+    width: 100%;
+    background-color: #ffffff !important;
+  }
 }
