--- a/style/g3w-queryresults.less
+++ b/style/g3w-queryresults.less
@@ -146,3 +146,11 @@
   }
 }
 
+
+.query-relations-page {
+  height: 100%;
+  font-size: 14px;
+  .query-relations, .query-relation {
+    height: 100%;
+  }
+}
