--- a/style/g3w-core.less
+++ b/style/g3w-core.less
@@ -147,5 +147,10 @@ button.close-panel-button {
   opacity    : 0.99;
 }
 
-
+/* cambio il colore dell sidebar scroll */
+.slimScrollBar {
+  background: none repeat scroll 0 0 #ffffff !important;
+  width: 7px!important;
+  opacity:0.5!important;
+}
 
