--- a/style/g3w-form.less
+++ b/style/g3w-form.less
@@ -67,9 +67,8 @@
     }
   }
   .photo-preview {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3px;
-    display: block;
+    margin-bottom: 5px;
+    max-width:300px;
+    margin-top: 5px;
   }
 }
