cambiato un pò di stile

--- a/style/app.less
+++ b/style/app.less
@@ -26,6 +26,7 @@
 @import "g3w-floatbar";
 @import "g3w-search";
 @import "g3w-catalog";
+@import "g3w-catalog-legend";
 @import "g3w-projectscatalog";
 @import "g3w-tools";
 @import "g3w-mapcontrols";
