--- a/style/g3w-catalog.less
+++ b/style/g3w-catalog.less
@@ -47,6 +47,7 @@ Licensed under MIT
 .tabbable-line > .nav-tabs > li.active {
   border-bottom: 4px solid #3c8dbc;
   position: relative;
+  font-weight: bold;
 }
 .tabbable-line > .nav-tabs > li.active > a {
   border: 0;
@@ -129,6 +130,9 @@ Licensed under MIT
 .catalog .tree-item {
   cursor: pointer
 }
+.catalog .tree-item:hover {
+  font-weight: bold;
+}
 
 .catalog .root {
   padding: 1px 3px 1px 0.8em;
@@ -167,3 +171,5 @@ Licensed under MIT
     margin: 0px;
   }
 }
+
+
