--- a/style/g3w-tools.less
+++ b/style/g3w-tools.less
@@ -15,7 +15,7 @@ ul.g3w-tools  {
       background-color:lighten(@sidebar-dark-submenu-bg, 15%);
       cursor: pointer;
       span {
-        display: table-cell;
+        margin-left:5px;
         vertical-align:middle;
       }
     }
@@ -28,6 +28,9 @@ ul.g3w-tools  {
         cursor: pointer;
       }
     }
+  }
+  .tool:hover {
+    background-color: #374850;
   }
 }
 
