--- a/style/g3w-sidebar.less
+++ b/style/g3w-sidebar.less
@@ -17,19 +17,35 @@
     padding: 10px 15px;
     li {
       background-color: lighten(@sidebar-dark-bg,10%);
+      border-radius: .25rem;
       padding: 2px;
       margin-bottom: 2px;
       cursor: pointer;
       &:hover {
         background-color: lighten(@sidebar-dark-bg,15%);
-        span {
-          text-decoration: underline;
-        }
       }
     }
   }
   #g3w-sidebarcomponents > li:last-child {
     margin-bottom: 10px;
+  }
+
+  // coloro le icone della sidebar
+
+  #g3w-sidebarcomponents .sidebaritem .fa-search {
+    color: #8DC3E3;
+  }
+
+  #g3w-sidebarcomponents .sidebaritem .fa-map-o {
+    color: #019A4C;
+  }
+
+  #g3w-sidebarcomponents .sidebaritem .fa-gears {
+    color: #FFE721;
+  }
+
+  #g3w-sidebarcomponents .sidebaritem .fa-print {
+    color: #FF9B21;
   }
 }
 
