--- a/style/g3w-contents.less
+++ b/style/g3w-contents.less
@@ -31,4 +31,13 @@
     width: 100%;
     background-color: #ffffff !important;
   }
+  .thumbnail {
+    position: relative;
+    padding: 0px;
+    margin-bottom: 20px;
+  }
+
+  .thumbnail img {
+    width: 100%;
+  }
 }
