--- a/style/g3w-catalog-legend.less
+++ b/style/g3w-catalog-legend.less
@@ -1,14 +1,21 @@
-#legend .divider {
-    display: block;
-    position: relative;
-    padding: 0;
-    margin: 8px auto;
-    height: 0;
-    width: 100%;
-    max-height: 0;
-    font-size: 1px;
-    line-height: 0;
-    clear: both;
-    border: none;
-    border-bottom: 1px solid rgba(65, 86, 96, 0.3);
+#legend {
+    .divider {
+        display: block;
+        position: relative;
+        padding: 0;
+        margin: 8px auto;
+        height: 0;
+        width: 100%;
+        max-height: 0;
+        font-size: 1px;
+        line-height: 0;
+        clear: both;
+        border: none;
+        border-bottom: 1px solid rgba(65, 86, 96, 0.3);
+    }
+    .legend-item {
+      width: 100%;
+      overflow: hidden;
+      position: relative;
+    }
 }
