--- a/style/g3w-tools.less
+++ b/style/g3w-tools.less
@@ -24,9 +24,9 @@ ul.g3w-tools  {
       i {
         width: 20px;
       }
-      span {
-        cursor: pointer;
-      }
+    }
+    .tool {
+      cursor:pointer;
     }
   }
   .tool:hover {
