--- a/style/less/sidebar-mini.less
+++ b/style/less/sidebar-mini.less
@@ -117,7 +117,7 @@
 .main-sidebar .user-panel,
 .sidebar-menu > li.header {
   white-space: nowrap;
-  overflow: hidden;
+  //overflow: hidden;
 }
 .sidebar-menu:hover {
   overflow: visible;
