aggiunto alcuni less file come project-menu e editing

--- a/style/app.less
+++ b/style/app.less
@@ -34,6 +34,8 @@
 @import "g3w-queryresults";
 @import "g3w-form";
 @import "g3w-contents";
+@import "g3w-menu-projects";
+@import "g3w-editing-panel";
 
 .toast-top-center {
   top: 60px;
@@ -42,46 +44,4 @@
 .toast-top-right {
   top: 60px;
 }
-.project-menu {
-  cursor: pointer;
-  margin-bottom: 20px;
-  margin-top:20px;
-}
-.project-menu-item-image {
-  position: relative;
-  overflow: hidden;
-  padding-bottom: 50%;
-}
-.project-menu-item-image img {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  height: 100%;
-}
-.project-menu-item-content {
-  padding: 15px;
-  background: rgba(255,255,255,0.3);
-}
-.project-menu-item-text {
-  position: relative;
-  overflow: hidden;
-  height: 100%;
-  text-align: center;
-}
-.project-menu-item-title {
-  text-align: center;
-  font-weight: bold;
-  background: rgba(255,255,255,0.5);
-  padding: 5px;
-}
-#address-credits span {
-  padding-left: 3px;
-}
 
-.row-equal {
-  display: flex;
-  flex-wrap: wrap;
-}
