gestione errori e apertura progetti

--- a/style/app.less
+++ b/style/app.less
@@ -32,10 +32,11 @@
 @import "g3w-mapcontrols";
 @import "g3w-mapmarker";
 @import "g3w-queryresults";
-@import "g3w-form";
+@import "g3w-form";;
 @import "g3w-contents";
 @import "g3w-menu-projects";
 @import "g3w-editing-panel";
+@import "g3w-errors";
 
 .toast-top-center {
   top: 60px;
