--- a/style/g3w-map.less
+++ b/style/g3w-map.less
@@ -1,1 +1,33 @@
+#addcustomlayer {
+  margin:30px;
+  position: relative;
+  border: 2px dashed #97A1A8;
+}
 
+#addcustomlayer p, #addcustomlayer h4 {
+  text-align: center;
+  line-height: 50px;
+  color: #97A1A8;
+  font-family: Arial;
+}
+
+#addcustomlayer div {
+  text-align: center;
+  line-height: 50px;
+  color: #97A1A8;
+}
+
+#addcustomlayer input{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.vue-color__chrome {
+  width: 100%;
+}
