--- a/style/g3w-catalog.less
+++ b/style/g3w-catalog.less
@@ -179,4 +179,33 @@ Licensed under MIT
   }
 }
 
+#layer-menu {
+  background: #FAFAFA;
+  border: 1px solid #BDBDBD;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+  display: block;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  min-width: 150px;
+  z-index: 999999;
+  color:#000000;
+}
+
+#layer-menu li {
+  border-bottom: 1px solid #E0E0E0;
+  margin: 0;
+  padding: 5px 15px;
+}
+
+#layer-menu li:last-child {
+  border-bottom: none;
+}
+
+#layer-menu li:hover {
+  background: #1E88E5;
+  color: #FAFAFA;
+}
+
 
