cambiato stile relationi risultati

--- a/style/g3w-queryresults.less
+++ b/style/g3w-queryresults.less
@@ -26,6 +26,14 @@
         }
       }
     }
+    .tooltip.top .tooltip-inner {
+      background-color:#3c8dbc;
+      margin-left: 30px;
+      font-weight:bold;
+    }
+    .tooltip.top .tooltip-arrow {
+      border-top-color: #3c8dbc;
+    }
     .divider {
       display: block;
       position: relative;
@@ -166,5 +174,11 @@
   font-size: 14px;
   .query-relations, .query-relation {
     height: 100%;
+  }
+  td {
+    color: #3c8dbc;
+    span {
+      font-size:1.5em;
+    }
   }
 }
