--- a/style/g3w-mapcontrols.less
+++ b/style/g3w-mapcontrols.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?tstof8');
-  src:  url('../fonts/icomoon.eot?tstof8#iefix') format('embedded-opentype'),
-  url('../fonts/icomoon.ttf?tstof8') format('truetype'),
-  url('../fonts/icomoon.woff?tstof8') format('woff'),
-  url('../fonts/icomoon.svg?tstof8#icomoon') format('svg');
+  src:  url('../fonts/iconmoon.eot?41sj94');
+  src:  url('../fonts/iconmoon.eot?41sj94#iefix') format('embedded-opentype'),
+  url('../fonts/iconmoon.ttf?41sj94') format('truetype'),
+  url('../fonts/iconmoon.woff?41sj94') format('woff'),
+  url('../fonts/iconmoon.svg?41sj94#iconmoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -434,4 +434,40 @@
   overflow: hidden;
   border-radius: 5px;
   margin-left: 2px;
+}
+
+/* qui messo i css del tooltip */
+
+.mtooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+}
+.mtooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+.mtooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid yellow;
+}
+.mtooltip-measure:before,
+.mtooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+.mtooltip-static:before {
+  border-top-color: #ffcc33;
 }
