controlli area e lunghezza

--- a/style/g3w-mapcontrols.less
+++ b/style/g3w-mapcontrols.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?41sj94');
-  src:  url('../fonts/icomoon.eot?41sj94#iefix') format('embedded-opentype'),
-  url('../fonts/icomoon.ttf?41sj94') format('truetype'),
-  url('../fonts/icomoon.woff?41sj94') format('woff'),
-  url('../fonts/icomoon.svg?41sj94#iconmoon') format('svg');
+  src:  url('../fonts/icomoon.eot?cvqof');
+  src:  url('../fonts/icomoon.eot?cvqof#iefix') format('embedded-opentype'),
+  url('../fonts/icomoon.ttf?cvqof') format('truetype'),
+  url('../fonts/icomoon.woff?cvqof') format('woff'),
+  url('../fonts/icomoon.svg?cvqof#iconmoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
