--- a/style/g3w-mapcontrols.less
+++ b/style/g3w-mapcontrols.less
@@ -455,7 +455,7 @@
 .mtooltip-static {
   background-color: #ffcc33;
   color: black;
-  border: 1px solid yellow;
+  border: 1px solid #ecbe2e;
 }
 .mtooltip-measure:before,
 .mtooltip-static:before {
