--- a/style/g3w-editing-panel.less
+++ b/style/g3w-editing-panel.less
@@ -2,6 +2,9 @@
   .panel-heading {
     padding: 5px 10px 5px 10px
   }
+  .toolboxselected {
+    border: 3px solid yellow;
+  }
   .editbtn {
     padding: 3px 3px 3px 3px;
     margin: 0px 5px 0px 5px;
