aggiunta classe css disableddiv per l'editng toolbox

--- a/style/g3w-editing-panel.less
+++ b/style/g3w-editing-panel.less
@@ -26,7 +26,12 @@
     }
   }
   .message {
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     font-size: 1.1em;
+  }
+  .disableddiv {
+    pointer-events: none;
+    opacity: 0.6;
   }
 }
