aggiunto alcuni stile per l'editing panel

--- a/style/g3w-editing-panel.less
+++ b/style/g3w-editing-panel.less
@@ -3,7 +3,7 @@
     padding: 5px 10px 5px 10px
   }
   .toolboxselected {
-    border: 3px solid yellow;
+    border-left: 5px solid #88d8ea;
   }
   .editbtn {
     padding: 3px 3px 3px 3px;
@@ -29,6 +29,13 @@
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: 1.1em;
+    color: #000000;
+  }
+  .warning-message {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 1.1em;
+    color: orangered;
   }
   .disableddiv {
     pointer-events: none;
