aggiunto less dell'editing table

--- a/style/app.less
+++ b/style/app.less
@@ -36,6 +36,7 @@
 @import "g3w-contents";
 @import "g3w-menu-projects";
 @import "g3w-editing-panel";
+@import "g3w-editing-table";
 @import "g3w-errors";
 
 .toast-top-center {
