--- a/style/g3w-form.less
+++ b/style/g3w-form.less
@@ -30,6 +30,13 @@
 .g3w-form-component_relations {
   margin-bottom: 10px;
   overflow: hidden;
+  .attr-label {
+    width: 30%;
+    max-width: 40%;
+  }
+  .attr-value {
+    font-weight: bold
+  }
   .editbtn {
     padding: 3px 3px 3px 3px;
     margin: 0px 5px 0px 5px;
