aggiunto alla sidebar possibilità di titolo

--- a/style/g3w-editing-panel.less
+++ b/style/g3w-editing-panel.less
@@ -13,6 +13,9 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
+  .messages-menu a:hover {
+    /*background-color: transparent !important ;*/
+  }
   /* Show the dropdown menu on hover */
   .toolbox .dropdown:hover .dropdown-content {
     display: block;
@@ -47,7 +50,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: 1.1em;
-    color: orangered;
+    color: #00529B;
   }
   .disableddiv {
     pointer-events: none;
