aggiunt datatabel libreria per le tabelle e modificato alcui stili

--- a/style/g3w-editing-table.less
+++ b/style/g3w-editing-table.less
@@ -1,2 +1,9 @@
 .g3w-editing-table {
+  .dataTables_filter {
+    margin: 10px;
+    float:left;
+  }
+  .dataTable.no-footer {
+    border-bottom: 0px;
+  }
 }
