--- a/style/g3w-mapcontrols.less
+++ b/style/g3w-mapcontrols.less
@@ -275,7 +275,7 @@
   width: 100%;
   height: 100%;
   padding: 5px 5px 5px 5px;
-  border: none;
+  border: 1px solid rgba(60, 141, 188, 0.3);
   text-indent: 6px;
   background-color: transparent;
   font-family: inherit;
