aggiunte librerie per il datetimepicker

--- a/style/g3w-header.less
+++ b/style/g3w-header.less
@@ -1,5 +1,5 @@
 //Navbar toggle button
-.sidebar-aside-toggle {
+.sidebar-aside-toggle, .controls-aside-toggle {
   position:absolute;
   left:@sidebar-width;
   top: @navbar-height;
@@ -21,6 +21,7 @@
       left: @sidebar-width-small;
   }
 }
+
 .sidebar-aside-toggle .icon-bar {
   display: none;
 }
@@ -28,7 +29,7 @@
 //Per evitare che la navbar si allarghi (in altezza) in modalità mobile (override di bootstrap)
 .navbar-form{
   padding-top:0px;
-  padding-bottom:0-px;
+  padding-bottom:0px;
   margin-bottom:0px
 }
 
