--- a/style/g3w-form.less
+++ b/style/g3w-form.less
@@ -37,6 +37,14 @@
   .attr-value {
     font-weight: bold
   }
+  .relation-editbtn {
+    padding: 3px 3px 3px 3px;
+    margin: 0px 5px 0px 5px;
+    border: 2px solid #3c8dbc;
+    border-radius: 5px;
+    font-size: 15px !important;
+    color: #3c8dbc;
+  }
   .editbtn {
     padding: 3px 3px 3px 3px;
     margin: 0px 5px 0px 5px;
