--- a/style/g3w-map.less
+++ b/style/g3w-map.less
@@ -28,3 +28,19 @@
   cursor: pointer;
 }
 
+.ol-attribution {
+  left: 10px;
+  position: absolute !important;
+  text-align: left !important;
+  bottom: 5px !important;
+  max-width: 320px !important;
+}
+
+.ol-attribution ul {
+  font-size: 1.0em !important;
+}
+
+.ol-attribution.ol-uncollapsible {
+  height: 1.3em !important;
+}
+
