--- a/style/less/skins/g3w-skin-blue.less
+++ b/style/less/skins/g3w-skin-blue.less
@@ -8,5 +8,6 @@
 @import "../mixins.less";
 
 .skin-blue {
-
+  .g3w-tooltip + .tooltip > .tooltip-inner {background-color: @light-blue;}
+  .g3w-tooltip + .tooltip > .tooltip-arrow { border-bottom-color: @light-blue; }
 }
