--- a/style/g3w-form.less
+++ b/style/g3w-form.less
@@ -66,6 +66,9 @@
     font-size: 15px !important;
     color: #3c8dbc;
   }
+  .add-link span.disabled {
+    opacity: 0.3;
+  }
   .editbtn {
     padding: 3px 3px 3px 3px;
     margin: 0px 5px 0px 5px;
