--- a/style/g3w-mapcontrols.less
+++ b/style/g3w-mapcontrols.less
@@ -35,6 +35,18 @@
   }
 }
 
+
+.ol-mouse-position-default {
+  right: 10px;
+  color: #ffffff;
+  background: #3f8dbc;
+  border-radius: 4px;
+  bottom: 30px;
+  z-index: 100;
+}
+
+
+
 .ol-custom-overviewmap {
   button {
     display: inline-block;
