--- a/style/g3w-sidebar.less
+++ b/style/g3w-sidebar.less
@@ -47,6 +47,10 @@
   #g3w-sidebarcomponents .sidebaritem .fa-print {
     color: #FF9B21;
   }
+
+  #g3w-sidebarcomponents .sidebaritem .fa-list-alt {
+    color: #ebebeb;
+  }
 }
 
 .main-sidebar,
