--- a/style/g3w-viewport.less
+++ b/style/g3w-viewport.less
@@ -12,6 +12,7 @@
     }
     &.content {
       float:right;
+      overflow-wrap: break-word;
       height:0px;
       width:0px;
       background-color: @gray-lighter;
