--- a/style/g3w-queryresults.less
+++ b/style/g3w-queryresults.less
@@ -60,7 +60,7 @@
       }
       .featurebox-header > td {
         overflow: hidden;
-        text-overflow: ellipsis;
+        //text-overflow: ellipsis;
         white-space: nowrap;
       }
     }
