changed metedata sidebar icon color

--- a/style/g3w-sidebar.less
+++ b/style/g3w-sidebar.less
@@ -48,8 +48,8 @@
     color: #FF9B21;
   }
 
-  #g3w-sidebarcomponents .sidebaritem .fa-list-alt {
-    color: #ebebeb;
+  #g3w-sidebarcomponents .sidebaritem .fa-file-code-o {
+    color: #ffffff;
   }
 }
 
