--- a/style/g3w-sidebar.less
+++ b/style/g3w-sidebar.less
@@ -27,8 +27,8 @@
     }
   }
 
-  #g3w-sidebarcomponents > li:last-child {
-    margin-bottom: 10px;
+  #g3w-sidebarcomponents {
+    //margin-bottom: 50px;
   }
   // coloro le icone della sidebar
 
