--- a/style/less/sidebar.less
+++ b/style/less/sidebar.less
@@ -83,7 +83,7 @@
 
 // Sidebar menu
 .sidebar-menu {
-  height: 100%;
+  //height: 100%;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -156,7 +156,7 @@
       }
     }
   }
-  
+
   .sidebar-tool {
     .tool-box {
       display: block;
