added main title and changes some css for scale mapcontrol

--- a/style/g3w-mapcontrols.less
+++ b/style/g3w-mapcontrols.less
@@ -35,12 +35,16 @@
   }
 }
 
+.ol-mouse-position {
+  top: auto;
+  height: 20px;
+}
+
 .ol-mouse-position-default {
   right: 10px;
   color: #ffffff;
   background: #3f8dbc;
   border-radius: 4px;
-  bottom: 30px;
   z-index: 100;
 }
 
@@ -95,6 +99,7 @@
 .ol-control-br {
   bottom: 7px;
   right:7px;
+  min-height: 20px;
 }
 
 .ol-zoom {
