--- a/style/g3w-queryresults.less
+++ b/style/g3w-queryresults.less
@@ -48,6 +48,7 @@
       border: none;
       border-bottom: 1px solid rgba(65, 86, 96, 0.3);
     }
+    table.feature_attributes tr:nth-child(even) {background: rgba(63, 141, 188, 0.1) !important}
     table {
       table-layout: fixed;
       thead {
