--- a/style/g3w-menu-projects.less
+++ b/style/g3w-menu-projects.less
@@ -14,8 +14,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  margin: auto;
-  height: 100%;
+  margin: auto
 }
 .project-menu-item-content {
   padding: 15px;
@@ -25,7 +24,7 @@
   position: relative;
   overflow: hidden;
   height: 100%;
-  text-align: center;
+  text-align: justify;
 }
 .project-menu-item-title {
   text-align: center;
