move error message application to traslation and changes some  map  styles

--- a/style/g3w-editing-table.less
+++ b/style/g3w-editing-table.less
@@ -1,9 +1,1 @@
-.g3w-editing-table {
-  .dataTables_filter {
-    margin: 10px;
-    float:left;
-  }
-  .dataTable.no-footer {
-    border-bottom: 0px;
-  }
-}
+.g3w-editing-table {}
