--- a/style/g3w-mapcontrols.less
+++ b/style/g3w-mapcontrols.less
@@ -500,3 +500,25 @@
     left: @sidebar-width-small;
   }
 }
+
+.ol-attribution {
+  left: 10px;
+  background-color: transparent !important;
+  position: absolute !important;
+  text-align: left !important;
+  bottom: 5px !important;
+}
+
+.ol-attribution ul {
+  font-size: 1.0em !important;
+}
+
+.ol-attribution ul > lilaafirst-child {
+  display: none
+}
+
+
+.ol-attribution.ol-uncollapsible {
+  height: 1.3em !important;
+}
+
