--- a/style/less/g3w-sidebar.less
+++ b/style/less/g3w-sidebar.less
@@ -42,8 +42,10 @@
     }
   }
 
-  #g3w-sidebarcomponents .sidebaritem .fa-gears {
-    color: #FFE721;
+  #g3w-sidebarcomponents .sidebaritem  {
+    .fa-gears, .fa-cogs {
+      color: #FFE721;
+    }
   }
 
   #g3w-sidebarcomponents .sidebaritem .fa-print {
