--- a/style/less/admin-lte2-less/header.less
+++ b/style/less/admin-lte2-less/header.less
@@ -49,6 +49,9 @@
         background: transparent;
       }
     }
+    li {
+      font-weight: bold;
+    }
   }
   .navbar-right {
     @media (max-width: @screen-header-collapse) {
