--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -191,22 +191,21 @@ Licensed under MIT
   min-width: 150px;
   z-index: 999999;
   color:#000000;
+
+  li {
+    border-bottom: 1px solid #E0E0E0;
+    margin: 0;
+    padding: 5px 15px;
+    &:last-child {
+      border-bottom: none;
+    }
+    &:hover {
+      background: #1E88E5;
+      color: #FAFAFA;
+      cursor:pointer;
+    }
+  }
 }
 
-#layer-menu li {
-  border-bottom: 1px solid #E0E0E0;
-  margin: 0;
-  padding: 5px 15px;
-}
-
-#layer-menu li:last-child {
-  border-bottom: none;
-}
-
-#layer-menu li:hover {
-  background: #1E88E5;
-  color: #FAFAFA;
-  cursor:pointer;
-}
 
 
