--- a/style/less/g3w-sidebar.less
+++ b/style/less/g3w-sidebar.less
@@ -37,27 +37,27 @@
   }
   // coloro le icone della sidebar
 
-  #g3w-sidebarcomponents .sidebaritem .fa-search {
+  #g3w-sidebarcomponents .sidebaritem a .fa-search {
     color: #8DC3E3;
   }
 
-  #g3w-sidebarcomponents .sidebaritem {
+  #g3w-sidebarcomponents .sidebaritem a {
     .fa-map-o, .fa-map {
       color: #019A4C;
     }
   }
 
-  #g3w-sidebarcomponents .sidebaritem  {
+  #g3w-sidebarcomponents .sidebaritem  a {
     .fa-gears, .fa-cogs {
       color: #FFE721;
     }
   }
 
-  #g3w-sidebarcomponents .sidebaritem .fa-print {
+  #g3w-sidebarcomponents .sidebaritem a .fa-print {
     color: #FF9B21;
   }
 
-  #g3w-sidebarcomponents .sidebaritem  {
+  #g3w-sidebarcomponents .sidebaritem a {
     .fa-file-code-o, .fa-file-code {
       color: #ffffff;
     }
