--- a/style/less/g3w-sidebar.less
+++ b/style/less/g3w-sidebar.less
@@ -32,10 +32,10 @@
     }
   }
 
-  #g3w-sidebarcomponents {
-    //margin-bottom: 50px;
+  .sidebar-menu > li {
+    border-bottom: 1px solid rgba(184, 199, 206, 0.1);
   }
-  // coloro le icone della sidebar
+  // color  icons of sidebar
 
   #g3w-sidebarcomponents .sidebaritem a .fa-search {
     color: #8DC3E3;
