--- a/style/less/g3w-header.less
+++ b/style/less/g3w-header.less
@@ -4,6 +4,7 @@
   left:@sidebar-width;
   top: @navbar-height;
   background-color: @light-blue;
+  box-shadow: 0 3px 5px rgba(0,0,0,0.5);
   color: white;
   border-bottom: 1px solid @light-blue;
   background-image: none;
