--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -2,7 +2,7 @@
 .g3w-viewport {
   background: #eeeeee;
   overflow:hidden;
-  line-height: 0px;
+  line-height: 0;
   .g3w-view {
     &.map {
       line-height: normal;
@@ -10,8 +10,8 @@
       height:0;
       width:0;
       position: relative;
-      //-webkit-transition: width 0.3s;
-      //transition: width 0.3s;
+      //-webkit-transition: all 0.1s;
+      //transition: all 0.1s;
     }
     &.content {
       line-height: normal;
@@ -26,10 +26,10 @@
         height: 100%;
       }
       &.split-h {
-        border-left: 4px solid darken(@gray-lighter,10%);
+        border-left: 1px solid darken(@gray-lighter, 10%);
       }
       &.split-v {
-        border-top: 2px solid darken(@gray-lighter,10%);
+        border-top: 1px solid darken(@gray-lighter, 10%);
       }
       .g3w_contents_back {
         display: inline-block;
@@ -46,8 +46,12 @@
       line-height: 1.5;
       margin: 0;
       button {
-        color: #b0b0b0;
+        color: darken(@light-blue,20%);;
       }
+    }
+    #contenttitle {
+      font-weight: bold;
+      color: darken(@light-blue,20%);
     }
   }
 }
