--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -42,6 +42,8 @@
 .ol-mouse-position {
   top: auto;
   height: 20px;
+  font-weight: bold;
+  color:darken(@light-blue,20%);
 }
 
 .ol-mouse-position-default {
