--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -1,12 +1,15 @@
 .g3w-form-component_header {
   overflow: hidden;
-  title {
-    font-size: 24px;
+  background-color: #ffffff !important;
+  .title {
+    font-weight: bold;
     display: inline-block;
     vertical-align: middle;
     line-height: 40px;
+    color: darken(@light-blue, 20%);
   }
 }
+
 .g3w-form-component_body {
   overflow: hidden;
   clear:both;
