--- a/style/less/g3w-contents.less
+++ b/style/less/g3w-contents.less
@@ -1,11 +1,11 @@
 .contents {
-  padding: 0px 10px;
+  padding: 0 10px;
   height: 100%;
   >div {
     height: 100%;
   }
   .header {
-    margin: 10px 0px;
+    margin: 10px 0;
     font-size: 1.1em;
     .key {
       display: inline-block;
@@ -20,7 +20,7 @@
     cursor: pointer;
     margin-bottom: 10px;
     .back-link {
-      color: #3c8dbc;
+      color: @light-blue;
       &:hover {
         text-decoration: underline;
       }
@@ -33,7 +33,7 @@
   }
   .thumbnail {
     position: relative;
-    padding: 0px;
+    padding: 0;
     margin-bottom: 20px;
   }
 
