--- a/style/less/app.less
+++ b/style/less/app.less
@@ -1,4 +1,4 @@
-@import "./admin-lte2-less/main.less";
+@import "./admin-lte2-less/main";
 @import "./admin-lte2-less/skins/_all-skins";
 
 .box-shadow(@h: 1px;@v: 1px;@blur: 1px;@color: rgba(0,0,0,.25)) {
@@ -7,13 +7,22 @@
           box-shadow: @h @v @blur @color;
 }
 
-@spinner-color: @light-blue;
 @map-spinner-color: white;
 
 .color-light-blue {
   color: @light-blue;
 }
 
+.toast-top-center {
+  top: 60px;
+}
+
+.toast-top-right {
+  top: 60px;
+}
+
+
+// core less styles
 @import "g3w-custom-fonts";
 @import "g3w-spinner";
 @import "g3w-core";
@@ -31,20 +40,84 @@
 @import "g3w-mapcontrols";
 @import "g3w-mapmarker";
 @import "g3w-queryresults";
-@import "g3w-form";;
+@import "g3w-form";
 @import "g3w-contents";
 @import "g3w-menu-projects";
 @import "g3w-editing-panel";
 @import "g3w-editing-table";
 @import "g3w-errors";
+@import "g3w-metadata";
 
-.toast-top-center {
-  top: 60px;
-}
+// custom g3w less skin styles
 
-.toast-top-right {
-  top: 60px;
-}
+// blue
+@import "g3w-skins/blue/g3w-mapcontrols";
+@import "g3w-skins/blue/g3w-catalog";
+@import "g3w-skins/blue/g3w-header";
+@import "g3w-skins/blue/g3w-queryresults";
+@import "g3w-skins/blue/g3w-viewport";
+@import "g3w-skins/blue/g3w-spinner";
+@import "g3w-skins/blue/g3w-search";
+@import "g3w-skins/blue/g3w-print";
+@import "g3w-skins/blue/g3w-icon";
+@import "g3w-skins/blue/g3w-editing-panel";
+@import "g3w-skins/blue/g3w-form";
+@import "g3w-skins/blue/g3w-metadata";
 
+//yellow
+@import "g3w-skins/yellow/g3w-mapcontrols";
+@import "g3w-skins/yellow/g3w-catalog";
+@import "g3w-skins/yellow/g3w-header";
+@import "g3w-skins/yellow/g3w-queryresults";
+@import "g3w-skins/yellow/g3w-viewport";
+@import "g3w-skins/yellow/g3w-spinner";
+@import "g3w-skins/yellow/g3w-search";
+@import "g3w-skins/yellow/g3w-print";
+@import "g3w-skins/yellow/g3w-icon";
+@import "g3w-skins/yellow/g3w-editing-panel";
+@import "g3w-skins/yellow/g3w-form";
+@import "g3w-skins/yellow/g3w-metadata";
+
+//red
+@import "g3w-skins/red/g3w-mapcontrols";
+@import "g3w-skins/red/g3w-catalog";
+@import "g3w-skins/red/g3w-header";
+@import "g3w-skins/red/g3w-queryresults";
+@import "g3w-skins/red/g3w-viewport";
+@import "g3w-skins/red/g3w-spinner";
+@import "g3w-skins/red/g3w-search";
+@import "g3w-skins/red/g3w-print";
+@import "g3w-skins/red/g3w-icon";
+@import "g3w-skins/red/g3w-editing-panel";
+@import "g3w-skins/red/g3w-form";
+@import "g3w-skins/red/g3w-metadata";
+
+//purple
+@import "g3w-skins/purple/g3w-mapcontrols";
+@import "g3w-skins/purple/g3w-catalog";
+@import "g3w-skins/purple/g3w-header";
+@import "g3w-skins/purple/g3w-queryresults";
+@import "g3w-skins/purple/g3w-viewport";
+@import "g3w-skins/purple/g3w-spinner";
+@import "g3w-skins/purple/g3w-search";
+@import "g3w-skins/purple/g3w-print";
+@import "g3w-skins/purple/g3w-icon";
+@import "g3w-skins/purple/g3w-editing-panel";
+@import "g3w-skins/purple/g3w-form";
+@import "g3w-skins/purple/g3w-metadata";
+
+//green
+@import "g3w-skins/green/g3w-mapcontrols";
+@import "g3w-skins/green/g3w-catalog";
+@import "g3w-skins/green/g3w-header";
+@import "g3w-skins/green/g3w-queryresults";
+@import "g3w-skins/green/g3w-viewport";
+@import "g3w-skins/green/g3w-spinner";
+@import "g3w-skins/green/g3w-search";
+@import "g3w-skins/green/g3w-print";
+@import "g3w-skins/green/g3w-icon";
+@import "g3w-skins/green/g3w-editing-panel";
+@import "g3w-skins/green/g3w-form";
+@import "g3w-skins/green/g3w-metadata";
 
 
