--- a/style/less/g3w-bottombar.less
+++ b/style/less/g3w-bottombar.less
@@ -1,8 +1,8 @@
 .bottombar {
   position:absolute;
   width:100%;
-  bottom:0px;
-  left:0px;
+  bottom:0;
+  left:0;
   min-height:200px;
   background-color:yellow;
 }
