--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -7,13 +7,11 @@
     margin: 0px;
     margin-left: 2px;
     padding: 2px 6px;
-    color: #fff;
     text-decoration: none;
     text-align: center;
     height: 39px;
     width: 39px;
     line-height: 1.42857143;
-    background-color: @light-blue;
     border: none;
     border-radius: 3px;
     font-size: 25px;
@@ -23,15 +21,11 @@
   }
   button:hover {
       text-decoration: none;
-      background-color: @light-blue;
+
   }
   button:focus{
     text-decoration: none;
-    background-color: @light-blue;
     outline: none;
-    &:hover {
-      background-color: @light-blue;
-    }
   }
 }
 
@@ -43,17 +37,17 @@
   top: auto;
   height: 20px;
   font-weight: bold;
-  color:darken(@light-blue,20%);
 }
 
 .ol-mouse-position-default {
   right: 10px;
-  color: #ffffff;
-  background: #3f8dbc;
   border-radius: 4px;
   z-index: 100;
 }
 
+.ol-mouse-position-default {
+  color: #ffffff;
+}
 
 .ol-custom-overviewmap {
   button {
@@ -68,7 +62,6 @@
 }
 
 .ol-custom-overviewmap  {
-  border: 2px solid @light-blue;
   box-shadow: 0 3px 5px rgba(0,0,0,0.5);
   border-radius: 5px;
   button {
@@ -85,9 +78,6 @@
   width: 200px;
 }
 
-.ol-custom-overviewmap .ol-overviewmap-box {
-  border: 2px solid @light-blue;
-}
 
 .ol-custom-overviewmap.ol-collapsed {
   border: 0px;
@@ -136,38 +126,33 @@
 
 .ol-scale-control {
   span.select2-selection {
-   border: 2px solid @light-blue;
     border-radius: 5px;
   }
 }
 
 .ol-scale-line {
-  background: @light-blue;
   left: auto;
   font-weight: bold;
   box-shadow: 0 3px 5px rgba(0,0,0,0.4);
 }
 
 .ol-rotate {
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
 }
 
 .ol-hidden {
   display:none;
 }
 
-.g3w-ol-toggled {
-  background-color: darken(@light-blue,20%) !important;
+.ol-attribution li a {
+  font-weight: bold;
 }
 
 .g3w-ol-disabled {
   .opacity(.80);
 }
 
-.ol-box {
-  border: 3px solid @light-blue;
-}
 
 /// nominatim
 .ol-geocoder.gcd-gl-container {
@@ -203,17 +188,13 @@
   left: 2.5em;
   width: 14.84375em;
   padding: 5px;
-  border: 1px solid #ccc;
   font-family: inherit;
   font-size: 0.875em;
-  background-color: #fff;
-  color: #222;
 }
 
 .ol-geocoder .gcd-gl-input:focus {
   border: none;
   outline: none;
-  box-shadow: inset 0 0 0 1px #4d90fe, inset 0 0 5px #4d90fe;
 }
 
 .ol-geocoder .gcd-gl-reset {
@@ -231,7 +212,6 @@
   cursor: pointer;
 }
 
-
 .ol-geocoder .gcd-gl-btn {
   position: absolute;
   width: 1.5625em;
@@ -242,6 +222,7 @@
   background-repeat: no-repeat;
   background-position: center center;
 }
+
 .ol-geocoder div.gcd-gl-result {
   position: absolute;
   top: 2.1875em;
@@ -267,7 +248,6 @@
 .ol-geocoder ul.gcd-gl-result > li {
   width: 100%;
   overflow: hidden;
-  border-bottom: 2px solid #eee;
   padding: 0px;
   line-height: 1.0rem;
   font-size:20px;
@@ -277,14 +257,6 @@
   display: block;
   text-decoration: none;
   padding: 3px 5px;
-}
-
-.ol-geocoder ul.gcd-gl-result > li > a:hover {
-  background-color: #d4d4d4;
-}
-
-.ol-geocoder ul.gcd-gl-result > li:nth-child(odd) {
-  background-color: #e0ffe0;
 }
 
 .ol-geocoder.gcd-txt-container {
@@ -333,7 +305,6 @@
   width: 100%;
   height: 100%;
   padding: 5px 5px 5px 5px;
-  border: 2px solid @light-blue;
   text-indent: 6px;
   background-color: transparent;
   font-family: inherit;
@@ -342,7 +313,6 @@
 
 .ol-geocoder .gcd-txt-input:focus {
   outline: none;
-  box-shadow: inset 0 0 0 1px #4d90fe, inset 0 0 6px #4d90fe;
 }
 
 .ol-geocoder .gcd-txt-reset {
@@ -377,7 +347,6 @@
   z-index: 100;
   width: 2.5em;
   height: 100%;
-  background-color: @light-blue ;
   border-radius: 0px;
 }
 
@@ -408,12 +377,10 @@
 .ol-geocoder ul.gcd-txt-result > li {
   width: 100%;
   overflow: hidden;
-  border-bottom: 1px solid @light-blue;
   line-height: 1rem;
   color: #ffffff;
   min-height: 40px;
   padding-left: 3px;
-  color: @light-blue
 }
 
 .ol-geocoder ul.gcd-txt-result > li > a {
@@ -468,25 +435,21 @@
 .gcd-road {
   font-size: 0.875em;
   font-weight: 500;
-  color: @light-blue;
 }
 
 .gcd-city {
   font-size: 1em;
   font-weight: bold;
-  color: @light-blue;
 }
 
 .gcd-country {
   font-size: 0.75em;
-  color: @light-blue;
 }
 
 /* qui messo i css del tooltip */
 
 .mtooltip {
   position: relative;
-  background: rgba(0, 0, 0, 0.9);
   border-radius: 4px;
   color: white;
   font-weight: bold;
@@ -494,18 +457,14 @@
   opacity: 0.7;
   white-space: nowrap;
 }
+
 .mtooltip-measure {
   opacity: 1;
   font-weight: bold;
 }
-.mtooltip-static {
-  background-color: #ffcc33;
-  color: black;
-  border: 1px solid #ecbe2e;
-}
+
 .mtooltip-measure:before,
 .mtooltip-static:before {
-  border-top: 6px solid rgba(0, 0, 0, 0.5);
   border-right: 6px solid transparent;
   border-left: 6px solid transparent;
   content: "";
@@ -514,9 +473,6 @@
   margin-left: -7px;
   left: 50%;
 }
-.mtooltip-static:before {
-  border-top-color: #ffcc33;
-}
 
 .controls-toggle {
   position: absolute;
@@ -524,9 +480,7 @@
   left:0 !important;
   top: 50px;
   cursor: pointer;
-  background-color: @light-blue;
   color: white;
-  border-bottom: 1px solid @light-blue;
   background-image: none;
   padding: 12.5px;
   //Add the fontawesome bars icon
@@ -565,7 +519,7 @@
 }
 
 .g3w-map-controls {
-  position:absolute;
+  position: absolute;
   flex-wrap: wrap;
   z-index: 100;
   display: flex;
