--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -202,5 +202,20 @@ Licensed under MIT
   }
 }
 
-
-
+#baselayers {
+  form {
+    ul {
+      display:flex;
+      flex-wrap:wrap;
+      padding: 0;
+      justify-content: space-around;
+      li {
+        cursor: pointer;
+        width: 45%;
+        div.text-center {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
