--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -203,18 +203,19 @@ Licensed under MIT
 }
 
 #baselayers {
-  form {
-    ul {
-      display:flex;
-      flex-wrap:wrap;
-      padding: 0;
-      justify-content: space-around;
-      li {
-        cursor: pointer;
-        width: 45%;
-        div.text-center {
-          font-weight: bold;
-        }
+  ul {
+    display:flex;
+    flex-wrap:wrap;
+    padding: 0;
+    justify-content: space-around;
+    li {
+      cursor: pointer;
+      width: 45%;
+      @media (min-width: 320px) and (max-width: 480px) {
+        width: 35%
+      }
+      div.text-center {
+        font-weight: bold;
       }
     }
   }
