form compoent check if a percentage. changed some css to editing form tab

--- a/style/g3w-form.less
+++ b/style/g3w-form.less
@@ -25,6 +25,9 @@
     border: none;
     border-bottom: 1px solid rgba(122, 122, 122, 0.2);
   }
+  .nav-tabs > li.active > a {
+    background-color: @light-blue;
+  }
 }
 
 .input-error-validation {
