addedd and changes less files to customize templae base on skin type

--- a/style/less/app.less
+++ b/style/less/app.less
@@ -51,6 +51,7 @@
 // custom g3w less skin styles
 
 // blue
+@import "g3w-skins/blue/g3w-overwrite-external";
 @import "g3w-skins/blue/g3w-mapcontrols";
 @import "g3w-skins/blue/g3w-catalog";
 @import "g3w-skins/blue/g3w-header";
@@ -63,8 +64,10 @@
 @import "g3w-skins/blue/g3w-editing-panel";
 @import "g3w-skins/blue/g3w-form";
 @import "g3w-skins/blue/g3w-metadata";
+@import "g3w-skins/blue/g3w-tabs-form-query";
 
 //yellow
+@import "g3w-skins/yellow/g3w-overwrite-external";
 @import "g3w-skins/yellow/g3w-mapcontrols";
 @import "g3w-skins/yellow/g3w-catalog";
 @import "g3w-skins/yellow/g3w-header";
@@ -77,8 +80,10 @@
 @import "g3w-skins/yellow/g3w-editing-panel";
 @import "g3w-skins/yellow/g3w-form";
 @import "g3w-skins/yellow/g3w-metadata";
+@import "g3w-skins/yellow/g3w-tabs-form-query";
 
 //red
+@import "g3w-skins/red/g3w-overwrite-external";
 @import "g3w-skins/red/g3w-mapcontrols";
 @import "g3w-skins/red/g3w-catalog";
 @import "g3w-skins/red/g3w-header";
@@ -91,8 +96,10 @@
 @import "g3w-skins/red/g3w-editing-panel";
 @import "g3w-skins/red/g3w-form";
 @import "g3w-skins/red/g3w-metadata";
+@import "g3w-skins/red/g3w-tabs-form-query";
 
 //purple
+@import "g3w-skins/purple/g3w-overwrite-external";
 @import "g3w-skins/purple/g3w-mapcontrols";
 @import "g3w-skins/purple/g3w-catalog";
 @import "g3w-skins/purple/g3w-header";
@@ -105,8 +112,10 @@
 @import "g3w-skins/purple/g3w-editing-panel";
 @import "g3w-skins/purple/g3w-form";
 @import "g3w-skins/purple/g3w-metadata";
+@import "g3w-skins/purple/g3w-tabs-form-query";
 
 //green
+@import "g3w-skins/green/g3w-overwrite-external";
 @import "g3w-skins/green/g3w-mapcontrols";
 @import "g3w-skins/green/g3w-catalog";
 @import "g3w-skins/green/g3w-header";
@@ -119,5 +128,5 @@
 @import "g3w-skins/green/g3w-editing-panel";
 @import "g3w-skins/green/g3w-form";
 @import "g3w-skins/green/g3w-metadata";
-
+@import "g3w-skins/green/g3w-tabs-form-query";
 
